product details page building

--- a/muzawed/resources/css/app.css
+++ b/muzawed/resources/css/app.css
@@ -15,7 +15,7 @@
     font-family: 'IBM Plex Sans Arabic', sans-serif;
 }
 [dir="ltr"] {
-    font-family: 'Inter', sans-serif;
+    font-family: 'Raleway', sans-serif;
 }
 .stop-color-1 {
     stop-color: #2563eb; 
